fixed modal-panel p element spacing, cleaner implementation for end-of-page icon spacing

--- a/css/modal-styles.css
+++ b/css/modal-styles.css
@@ -34,7 +34,7 @@
 
 #EOF {
 	width: 100%;
-	height: 120px;
+	height: 180px;
 }
 
 #EOF > .image-container {
@@ -94,9 +94,23 @@
 	flex-wrap: wrap;
 }
 
+#modal-panel div:nth-last-of-type(2) {
+	/* Trims the bottom padding off the last content div to avoid interference with EOF icon. */
+	padding-bottom: 0px;
+}
+
+#modal-panel .paragraph-container > p:first-of-type {
+	padding-top: 0px;
+}
+
+#modal-panel .paragraph-container p:last-of-type {
+	padding-bottom: 0px;
+}
+
 #modal-panel p {
 	color: black;
-	padding: 8px;
+	padding-top: 8px;
+	padding-bottom: 8px;
 }
 
 .container {
@@ -236,8 +250,8 @@
 		width: 100%;
 	}
 
-	#EOT {
-		padding-bottom: 0;
+	#EOF {
+		height: 100px;
 	}
 }
 
@@ -248,7 +262,8 @@
 	
 	.figure-container {
 		width: 80%;
-		padding: 16px 0 40px 0;
+		padding-top: 16px;
+		padding-bottom: 40px;
 	}
 
 	#modal-video-container {
@@ -261,13 +276,9 @@
 		padding-right: 0px;
 	}
 
-	#modal-panel > p {
+	#modal-panel > .paragraph-container {
 		padding: 0px;
 		width: 80%;
 		margin: 0 auto;
-	}
-
-	#EOF {
-		padding-bottom: 32px;
 	}
 }
